--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brandon's Game</title>
-
+    <title>Space Invaders</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <canvas></canvas>
-    <script src="script.js"></script>
+    <div class="wrap">
+      <header>Space Invaders</header>
+      <div class="game-wrapper">
+        <div class="main"></div>
+      </div>
+      <script src="script.js"></script>
+      <footer></footer>
+    </div>
   </body>
 </html>
